--- a/MATH_Mission/MATH_Mission.uproject
+++ b/MATH_Mission/MATH_Mission.uproject
@@ -7,7 +7,10 @@
 		{
 			"Name": "MATH_Mission",
 			"Type": "Runtime",
-			"LoadingPhase": "Default"
+			"LoadingPhase": "Default",
+			"AdditionalDependencies": [
+				"Engine"
+			]
 		}
 	],
 	"Plugins": [
