--- a/MATH_Mission/Config/DefaultEngine.ini
+++ b/MATH_Mission/Config/DefaultEngine.ini
@@ -1,9 +1,9 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Levels/Main.Main
+GameDefaultMap=/Game/Levels/Menu.Menu
 GlobalDefaultGameMode=/Game/Blueprints/Player/BP_MATH_Mission_Gamemode.BP_MATH_Mission_Gamemode_C
-EditorStartupMap=/Game/Levels/Main.Main
+EditorStartupMap=/Game/Levels/Menu.Menu
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
