--- a/MATH_Mission/Config/DefaultGame.ini
+++ b/MATH_Mission/Config/DefaultGame.ini
@@ -1,3 +1,7 @@
 
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=C92AE08841A511DA2CE54592F58DB907
+
+[/Script/UnrealEd.ProjectPackagingSettings]
+BuildConfiguration=PPBC_Shipping
+
